--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -47,20 +47,11 @@
 
 
   </script>
-<style>
-  body {
-    background-image: url("images/1.png");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    font-weight: bolder;
-
-  }
-</style>
 
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-
+<div class="hint" style="background-image: url('images/1.png');">
   <div class="site-wrap">
 
     <div class="site-mobile-menu site-navbar-target">
@@ -80,8 +71,8 @@
             <p class="mb-0">
               <span class="mr-3"><strong class="text-white">Phone:</strong> <a href="tel:+91 99719 15524">+91 99719
                   15524</a></span>
-              <span><strong class="text-white">Email:</strong> <a
-                  href="mailto:hint2mint@gmail.com" target="_blank">hint2mint@gmail.com</a></span>
+              <span><strong class="text-white">Email:</strong> 
+                <a href="mailto:hint2mint@gmail.com" target="_blank">hint2mint@gmail.com</a></span>
             </p>
           </div>
           <div class="col-md-6">
@@ -215,7 +206,7 @@
 </script>
 
 
-
+</div>
 </body>
 
 </html>
