--- a/hint2mint/project/version2/pages/blogs/relativestrengthindex.html
+++ b/hint2mint/project/version2/pages/blogs/relativestrengthindex.html
@@ -59,7 +59,7 @@
                 <span class="mr-3"><strong class="text-white">Phone:</strong> <a href="tel:+91 99719 15524">+91 99719
                     15524</a></span>
                 <span><strong class="text-white">Email:</strong> <a
-                    href="mailto:hint2mint@gmail.com">hint2mint@gmail.com</a></span>
+                    href="mailto:hint2mint@gmail.com" target="_blank">hint2mint@gmail.com</a></span>
               </p>
             </div>
             <div class="col-md-6">
@@ -112,16 +112,7 @@
 
             </div>
           </div>
-          <style>
-            body {
-              background-image: url("../../images/1.png");
-              background-repeat: no-repeat;
-              background-attachment: fixed;
-              font-weight: bolder;
-              
-            }
-          </style>
-        </header>
+        </header><body>
         <div class="site-blocks-cover overlay" style="background-image: url(../../images/blogs/blogbanner.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
           <div class="container">
             
@@ -130,7 +121,7 @@
       </div>  
     </div>
   </div>
-  
+  <div class="hint" style="background-image: url('../../images/1.png');">
     <div class="site-section">
       <div class="container">
         <div class="row">
@@ -253,5 +244,6 @@
       $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
     });
   </script>
+  </div>
   </body>
 </html>
