--- a/hint2mint/project/version2/pages/footer/tandc.html
+++ b/hint2mint/project/version2/pages/footer/tandc.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" href="../../css/style.css">
 
-    <link rel="stylesheet" href="../../css/navcolor.css">
+    <link rel="stylesheet" href="../../css/index.css">
 
     <script src="https://smtpjs.com/v3/smtp.js">
 </script>
@@ -122,7 +122,7 @@
         
     </div>
   </div>
-  <div class="hint" style="background-image: url('../../asset/images/background/background.png');">
+  
     <div class="site-section">
       <div class="container">
 
@@ -244,6 +244,6 @@
     $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
   });
 </script>
-</div>
+
 </body>
 </html>
