--- a/hint2mint/project/version2/index.html
+++ b/hint2mint/project/version2/index.html
@@ -25,7 +25,7 @@
 
   <link rel="stylesheet" href="css/style.css">
 
-  <link rel="stylesheet" href="css/navcolor.css">
+  <link rel="stylesheet" href="css/index.css">
 
   <script src="https://smtpjs.com/v3/smtp.js">
 </script>
@@ -138,7 +138,7 @@
     </div>
 </div>
 <body>
-<div class="hint">
+
   <section class="site-section" id="site-section"></section>
 
   <div class="site-section" id="about-section"> </div>
@@ -208,7 +208,7 @@
 </script>
 
 
-</div>
+
 </div>
 </body>
 
