--- a/hint2mint/project/version2/pages/blogs/whichsector.html
+++ b/hint2mint/project/version2/pages/blogs/whichsector.html
@@ -24,7 +24,7 @@
 
     <link rel="stylesheet" href="../../css/style.css">
 
-    <link rel="stylesheet" href="../../css/navcolor.css">
+    <link rel="stylesheet" href="../../css/index.css">
 
     <script src="https://smtpjs.com/v3/smtp.js">
 </script>
@@ -123,7 +123,7 @@
       </div>  
     </div>
   </div>
-  <div class="hint" style="background-image: url('../../asset/images/background/background.png');">
+  
     <div class="site-section">
       <div class="container">
         <div class="row">
@@ -200,6 +200,6 @@
       $('header').toggleClass('scrolled',$(this).scrollTop() > 600);
     });
   </script>
-</div>
+
   </body>
 </html>
