--- a/hint2mint/manual/base template/create/single.html
+++ b/hint2mint/manual/base template/create/single.html
@@ -99,7 +99,7 @@
 
   
 
-    <div class="site-blocks-cover overlay" style="background-image: url(asset/images/hero_1.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover overlay" style="background-image: url(asset/images/hero_1_hint2mint_hint2mint_hint2mint.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center justify-content-center text-center">
 
@@ -149,7 +149,7 @@
               <ul class="comment-list">
                 <li class="comment">
                   <div class="vcard bio">
-                    <img src="asset/images/person_2.jpg" alt="Image">
+                    <img src="asset/images/person_2_hint2mint_hint2mint_hint2mint.jpg" alt="Image">
                   </div>
                   <div class="comment-body">
                     <h3>Jacob Smith</h3>
@@ -161,7 +161,7 @@
 
                 <li class="comment">
                   <div class="vcard bio">
-                    <img src="asset/images/person_3.jpg" alt="Image">
+                    <img src="asset/images/person_3_hint2mint_hint2mint_hint2mint.jpg" alt="Image">
                   </div>
                   <div class="comment-body">
                     <h3>Chris Meyer</h3>
@@ -173,7 +173,7 @@
                   <ul class="children">
                     <li class="comment">
                       <div class="vcard bio">
-                        <img src="asset/images/person_5.jpg" alt="Image">
+                        <img src="asset/images/person_5_hint2mint_hint2mint_hint2mint.jpg" alt="Image">
                       </div>
                       <div class="comment-body">
                         <h3>Chintan Patel</h3>
@@ -186,7 +186,7 @@
                       <ul class="children">
                         <li class="comment">
                           <div class="vcard bio">
-                            <img src="asset/images/person_1.jpg" alt="Image">
+                            <img src="asset/images/person_1_hint2mint_hint2mint_hint2mint.jpg" alt="Image">
                           </div>
                           <div class="comment-body">
                             <h3>Jean Doe</h3>
@@ -198,7 +198,7 @@
                             <ul class="children">
                               <li class="comment">
                                 <div class="vcard bio">
-                                  <img src="asset/images/person_4.jpg" alt="Image">
+                                  <img src="asset/images/person_4_hint2mint_hint2mint_hint2mint.jpg" alt="Image">
                                 </div>
                                 <div class="comment-body">
                                   <h3>Ben Afflick</h3>
@@ -216,7 +216,7 @@
 
                 <li class="comment">
                   <div class="vcard bio">
-                    <img src="asset/images/person_1.jpg" alt="Image">
+                    <img src="asset/images/person_1_hint2mint_hint2mint_hint2mint.jpg" alt="Image">
                   </div>
                   <div class="comment-body">
                     <h3>Jean Doe</h3>
@@ -277,7 +277,7 @@
               </div>
             </div>
             <div class="sidebar-box">
-              <img src="asset/images/person_1.jpg" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
+              <img src="asset/images/person_1_hint2mint_hint2mint_hint2mint.jpg" alt="Image" class="img-fluid mb-4 w-50 rounded-circle">
               <h3 class="text-black">About The Author</h3>
               <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic life One day however a small line of blind text by the name of Lorem Ipsum decided to leave for the far World of Grammar.</p>
               <p><a href="#" class="btn btn-primary btn-md text-white">Read More</a></p>
