--- a/hint2mint/project/UI/cs.html
+++ b/hint2mint/project/UI/cs.html
@@ -33,7 +33,7 @@
     <div class="bgimg">
       <nav class="navbar navbar-expand-md bg-dark bg-transparent fixed-top">
           <div class="container">
-              <a href="#" class="navbar-brand"><img src ="asset/images/companylogo/logo.jpg"></a>
+              <a href="#" class="navbar-brand"><img src ="asset/images/companylogo/logo_hint2mint_hint2mint_hint2mint.jpg"></a>
               <button class="navbar-toggler bg-dark" type="button" data-toggle="collapse"
                   data-target="#collapsenavbar">
                   <span class="navbar-toggler-icon"></span> 
@@ -151,7 +151,7 @@
         <div class="row teamsetting">
           <div class="col-lg-4 col-md-4 col-sm-10 d-block m-auto">
             <figure class="figure">  
-                <img src="asset/images/blog asset/images/dixita.jpg" class="figure-img img-fluid rounded-circle" height="250px" width="250px">
+                <img src="asset/images/blog asset/images/dixita_hint2mint_hint2mint_hint2mint.jpg" class="figure-img img-fluid rounded-circle" height="250px" width="250px">
                 <figcaption>
 
 
@@ -173,7 +173,7 @@
 
           <div class="col-lg-4 col-md-4 col-sm-10 d-block m-auto">
             <figure class="figure">  
-                <img src="asset/images/blog asset/images/paras.jpg" class="figure-img img-fluid rounded-circle" height="250px" width="250px">
+                <img src="asset/images/blog asset/images/paras_hint2mint_hint2mint_hint2mint.jpg" class="figure-img img-fluid rounded-circle" height="250px" width="250px">
                 <figcaption>
 
 
@@ -271,7 +271,7 @@
       <div class="row teamsetting">
         <div class="col-lg-4 col-md-4 col-sm-10 d-block m-auto">
           <figure class="figure">  
-              <img src = "https://img.etimg.com/thumb/msid-74211686,width-445,resizemode-4/bulls-make-a-comeback-what-lies-ahead.jpg" class="figure-img" height="300px" width="400px">
+              <img src = "https://img.etimg.com/thumb/msid-74211686,width-445,resizemode-4/bulls-make-a-comeback-what-lies-ahead_hint2mint_hint2mint_hint2mint.jpg" class="figure-img" height="300px" width="400px">
              
           </figure>
               
