--- a/hint2mint/project/version2/pages/footer/tandc.html
+++ b/hint2mint/project/version2/pages/footer/tandc.html
@@ -83,7 +83,7 @@
               <div class="row align-items-center">
                 
                 <div class="col-11 col-xl-2">
-                  <h1 class="mb-0 site-logo"><a href="../../index.html" class="text-black h2 mb-0"><img src="../../asset/images/logo/watermark.png" height="90px" width="90px" alt="asset/images/logo.jpg"><span class="text-primary"></span> </a></h1>
+                  <h1 class="mb-0 site-logo"><a href="../../index.html" class="text-black h2 mb-0"><img src="../../asset/images/logo/watermark_hint2mint.png" height="90px" width="90px" alt="asset/images/logo_hint2mint_hint2mint_hint2mint.jpg"><span class="text-primary"></span> </a></h1>
                 </div>
                 <div class="col-12 col-md-10 d-none d-xl-block">
                   <nav class="site-navigation position-relative text-right" role="navigation">
@@ -114,7 +114,7 @@
             </div>
         </header>
         <body>
-        <div class="site-blocks-cover overlay" style="background-image: url(../../asset/images/disclaimer/d5.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
+        <div class="site-blocks-cover overlay" style="background-image: url(../../asset/images/disclaimer/disclaimer_hint2mint.jpg);" data-aos="fade" data-stellar-background-ratio="0.5">
           <div class="container">
             
           </div>
